force-app/main/default/objects/Channel_Activity__c/Channel_Activity__c.object-meta.xml
<CustomObject>
    <label>Channel Activity Weightage</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Channel Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Activity Weightage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>