force-app/main/default/objects/Channel_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Completed Phone Call (negative outcome)</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Click-through</fullName>
            </value>
            <value>
                <fullName>Forwarded</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Not Attended</fullName>
            </value>
            <value>
                <fullName>Opened</fullName>
            </value>
            <value>
                <fullName>Clicked</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>