force-app/main/default/objects/Channel_Activity__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipName>Channel_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>