force-app/main/default/objects/Channel_Activity__c/fields/Parent_Channel_Activity_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Parent_Channel_Activity_Weightage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Channel Activity Weightage</label>
    <referenceTo>Channel_Activity__c</referenceTo>
    <relationshipLabel>Parent Channel Activity Weightage</relationshipLabel>
    <relationshipName>Channel_Activity_Weightage</relationshipName>
    <type>Lookup</type>
</CustomField>