force-app/main/default/objects/Channel_Activity__c/fields/Per_Activity_Score__c.field-meta.xml
<CustomField>
    <fullName>Per_Activity_Score__c</fullName>
    <formula>(Channel__r.Weightage__c / Channel__r.Maximum_Occurance__c ) * (Weightage__c / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per Activity Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>