force-app/main/default/objects/Channel_Activity__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <formula>Channel__r.Channel_Category__c &amp;&apos;_&apos;&amp; TEXT(Channel__r.Channel_Name__c)&amp;&apos;_&apos;&amp; TEXT(Activity_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Key</label>
    <type>Text</type>
</CustomField>