force-app/main/default/objects/Channel_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Channel__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>Weightage__c</columns>
    <columns>Per_Activity_Score__c</columns>
    <columns>Parent_Channel_Activity_Weightage__c</columns>
    <columns>Unique_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>